# MovieCamera

./: .gitignore  CMakeLists.txt  README.md  datarefs.json
.github/workflows/: build.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
src/: MovieCamera.cpp
src/ImgWindow/: ImgFontAtlas.cpp  ImgWindow.cpp  SystemGL.h
